--- a/src/BankCard/index.less
+++ b/src/BankCard/index.less
@@ -4,7 +4,7 @@
   height: 228px;
   margin-bottom: 12px;
   padding: 110px 15px 10px;
-  background: url(./bank.png) 0 0 no-repeat;
+  background: url('./bank.png') 0 0 no-repeat;
 
   .cardNo {
     font-size: 26px;
