--- a/src/QrCode/QrCode.less
+++ b/src/QrCode/QrCode.less
@@ -1,10 +1,13 @@
 .wrapper {
   width: 300px;
 
-  .qrcode canvas {
-    display: block;
-    width: 100%;
-    max-width: 300px !important;
+  .qrcode {
+    vertical-align: top;
+
+    > * {
+      width: 100%;
+      max-width: 300px !important;
+    }
   }
 
   .download {
